# loki-federation

./: README.md
.github/workflows/: rust.yml
local-loki/: inject-data.sh  run-loki.sh  run.sh
pkg/: Cargo.toml  Dockerfile  config-grpc.toml  config-http.toml  config.toml
pkg/core/: Cargo.toml
pkg/core/src/: aggregate.rs  config.rs  datasources_provider.rs  federated_loki.rs  federated_loki_test.rs  lib.rs
pkg/generic-loki-client/: Cargo.toml
pkg/generic-loki-client/src/: lib.rs
pkg/grpc-loki-client/: Cargo.toml  build.rs
pkg/grpc-loki-client/proto/: logproto.proto
pkg/grpc-loki-client/src/: lib.rs
pkg/http-loki-client/: Cargo.toml
pkg/http-loki-client/src/: lib.rs
pkg/prometheus-labels-parser/: Cargo.toml
pkg/prometheus-labels-parser/src/: label_grammar.pest  lib.rs
